--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ torch>=2.0.0
 numpy>=1.24.0
 accelerate==0.24.1
 
-# Server dependencies  
-uvicorn[standard]==0.24.0
-fastapi==0.104.1
-pydantic==2.5.0
+# Server dependencies - updated to compatible versions
+uvicorn[standard]>=0.30.0
+fastapi>=0.112.0
+pydantic>=2.8.0
